MainActivity game fixed #5 now the game ends properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="txtBlockindex">Block index:</string>
     <string name="txtStep">Step</string>
     <string name="txtreset">Reset</string>
+    <string name="new_game">New Game</string>
 
 </resources>
