--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="txtStep">Step</string>
     <string name="txtreset">Reset</string>
     <string name="new_game">New Game</string>
+    <string name="game_name">Blokus Duo</string>
+    <string name="txt_player_start">I want to start</string>
+    <string name="txt_ai_start">Let the AI start</string>
 
 </resources>
