beadás előtti első last commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="game_name">Blokus Duo</string>
     <string name="txt_player_start">I want to start</string>
     <string name="txt_ai_start">Let the AI start</string>
+    <string name="btn_menu">Menu</string>
 
 </resources>
